@@ -11,7 +11,10 @@ public class AdministradorUsuarios
 	private HashMap<Integer, Operador> operadores = new HashMap<>();
 	private HashMap<Integer, Cliente> clientes = new HashMap<>();
 	private ArrayList<Integer> listaIDs;
-	private Integer ultimoID = listaIDs.getLast();
+	private Integer ultimoID = listaIDs.get(listaIDs.size()-1);
+	//En el ArrayList listaIDs a algunos integrantes les sale la opcion .getLast()
+	//pero a otros no, se dejara como .get(listaIds.size()-1) para que sirva en todas 
+	//las maquinas
 	
 	public AdministradorUsuarios() {
 		
